--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "build": "npm run build:js && npm run build:static",
     "build:js": "rimraf build && rollup -c",
-    "build:static": "rsync -rm --exclude '*.js' src/** build"
+    "build:static": "rsync -rm --exclude '*.js' src/** build",
+    "dev": "rollup -c --watch"
   },
   "repository": {
     "type": "git",
@@ -27,6 +28,7 @@
     "rollup": "^1.26.3",
     "rollup-plugin-babel": "^4.3.3",
     "rollup-plugin-commonjs": "^10.1.0",
+    "rollup-plugin-json": "^4.0.0",
     "rollup-plugin-node-resolve": "^5.2.0",
     "rollup-plugin-terser": "^5.1.2"
   },
