--- a/package.json
+++ b/package.json
@@ -19,16 +19,12 @@
   },
   "homepage": "https://github.com/kriskuiper/functional-programming#readme",
   "devDependencies": {
-    "@babel/core": "^7.6.4",
-    "@babel/preset-env": "^7.6.3",
     "eslint": "^6.6.0",
     "rimraf": "^3.0.0",
     "rollup": "^1.26.3",
-    "rollup-plugin-babel": "^4.3.3",
     "rollup-plugin-commonjs": "^10.1.0",
     "rollup-plugin-json": "^4.0.0",
-    "rollup-plugin-node-resolve": "^5.2.0",
-    "rollup-plugin-terser": "^5.1.2"
+    "rollup-plugin-node-resolve": "^5.2.0"
   },
   "dependencies": {
     "d3": "^5.12.0"
