--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "rollup -c",
-    "dev": "rsync -rm src/data public && rollup -c --watch"
+    "dev": "rollup -c --watch"
   },
   "repository": {
     "type": "git",
